[gd_scene load_steps=9 format=2]

[ext_resource path="res://environment/central_lock/textures/central-lock.png" type="Texture" id=1]
[ext_resource path="res://environment/central_lock/central_lock.gd" type="Script" id=2]
[ext_resource path="res://environment/central_lock/textures/light-upper-left.png" type="Texture" id=3]
[ext_resource path="res://environment/central_lock/textures/light-upper-right.png" type="Texture" id=4]
[ext_resource path="res://environment/central_lock/textures/light-lower-left.png" type="Texture" id=5]
[ext_resource path="res://environment/central_lock/textures/light-lower-right.png" type="Texture" id=6]
[ext_resource path="res://environment/central_lock/textures/light-central.png" type="Texture" id=7]
[ext_resource path="res://environment/central_lock/CentralLockSwitch.tscn" type="PackedScene" id=8]

[node name="CentralLock" type="Node2D"]
script = ExtResource( 2 )

[node name="MainSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="LightSprites" type="Node2D" parent="."]

[node name="UpperLeft" type="Sprite" parent="LightSprites"]
position = Vector2( -8, -8 )
texture = ExtResource( 3 )

[node name="UpperRight" type="Sprite" parent="LightSprites"]
position = Vector2( 8, -8 )
texture = ExtResource( 4 )

[node name="LowerLeft" type="Sprite" parent="LightSprites"]
position = Vector2( -8, 8 )
texture = ExtResource( 5 )

[node name="LowerRight" type="Sprite" parent="LightSprites"]
position = Vector2( 8, 8 )
texture = ExtResource( 6 )

[node name="Central" type="Sprite" parent="LightSprites"]
texture = ExtResource( 7 )

[node name="Switches" type="Node2D" parent="."]

[node name="SectorOneSwitch" parent="Switches" instance=ExtResource( 8 )]
position = Vector2( -40, -16 )

[node name="SectorTwoSwitch" parent="Switches" instance=ExtResource( 8 )]
position = Vector2( 40, -16 )
sector_number = 2

[node name="SectorThreeSwitch" parent="Switches" instance=ExtResource( 8 )]
position = Vector2( -40, 32 )
sector_number = 3

[node name="SectorFourSwitch" parent="Switches" instance=ExtResource( 8 )]
position = Vector2( 40, 32 )
sector_number = 4

[node name="Tween" type="Tween" parent="."]
